# ssh-mountmate

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  about.toml  deny.toml  pyproject.toml  rsshmount_gui.pyw
.github/workflows/: build.yml  license-inventory-dev.yml  python-port-build.yml  python-port-release.yml  release-notes.yml  release.yml  rust-rewrite.yml
app/: rsshmount.py  rsshmount_gui.pyw
crates/mountmate-app/: Cargo.toml  build.rs
crates/mountmate-app/examples/: freedesktop_notification_probe.rs
crates/mountmate-app/src/: cli.rs  i18n.rs  main.rs  transfer_center.rs  tray.rs
crates/mountmate-core/: Cargo.toml  build.rs
crates/mountmate-core/src/: app_command.rs  capacity.rs  connection.rs  credential.rs  dependency.rs  installed.rs  interactive_ssh.rs  lib.rs  model.rs  mountpoint.rs  navigation_refresh.rs  paths.rs  plink_binary.rs  process.rs  rc.rs  rclone.rs  rclone_binary.rs  runtime.rs  service.rs  ssh.rs  storage.rs  transfer.rs  update.rs  update_helper.rs  update_install.rs  update_manifest.rs  update_workflow.rs
crates/mountmate-core/tests/: legacy_migration.rs  packaged_update.rs  update_signature.rs  update_signing_cli.rs
crates/mountmate-core/tests/fixtures/legacy-v0.3/: cache-sentinel.txt  log-sentinel.txt  rclone.conf  servers.json  settings.json  state.json
crates/mountmate-platform/: Cargo.toml
crates/mountmate-platform/src/: lib.rs  navigation.rs
distribution/: SSHMountMate.install-layout  licenses.hbs  update-public-keys.json
distribution/macos/: Info.plist
distribution/rclone/: rclone-v1.74.4-swr.patch  source.json
distribution/windows-installer/: SSHMountMate.iss  build-installer.ps1
docs/: codex-handoff-2026-07-16.md  codex-handoff-2026-07-16.zh-CN.md  development-roadmap.md  manual-acceptance-v0.4.1-alpha.3.md  manual-acceptance-v0.4.2-alpha.1.md  manual-acceptance-v0.4.2-alpha.2.md  manual-acceptance-v0.4.2-alpha.3.md  rust-rewrite-audit.md  rust-rewrite.md  update-signing.md
licenses/: RUST-THIRD-PARTY.txt  quick-xml-LICENSE-MIT.txt  rustix-LICENSE-MIT.txt
python_port/: .gitignore
release-notes/: v0.1.5.md  v0.1.6-rc.1.md  v0.1.7-rc.1.md  v0.2.0-rc.1.md  v0.2.0-rc.2.md  v0.2.0-rc.3.md  v0.2.0.md  v0.2.1-rc.1.md  v0.2.1-rc.10.md  v0.2.1-rc.2.md  v0.2.1-rc.3.md  v0.2.1-rc.4.md  v0.2.1-rc.5.md  v0.2.1-rc.6.md  v0.2.1-rc.7.md  v0.2.1-rc.8.md  v0.2.1-rc.9.md  v0.2.1.md  v0.2.2-rc.1.md  v0.2.2-rc.2.md  v0.2.2.md  v0.2.3-rc.1.md  v0.2.3-rc.2.md  v0.2.3-rc.3.md  v0.2.3-rc.4.md  v0.2.3-rc.5.md  v0.2.3.md  v0.2.4-rc.1.md  v0.2.4.md  v0.2.5-rc.1.md  v0.2.5-rc.2.md  v0.2.5-rc.3.md  v0.2.5.md  v0.3.0-rc.1.md  v0.3.0-rc.2.md  v0.3.0-rc.3.md  v0.3.0-rc.4.md  v0.3.0.md  v0.4.0-alpha.1.md  v0.4.0-alpha.2.md  (+32 more)
scripts/: build-patched-rclone.sh  build-windows-exe.ps1  generate-rust-licenses.sh  package-linux-amd64.sh  package-windows-amd64.sh
src/ssh_mountmate/: __init__.py  app_ipc.py  core.py  gui.py  mount_process.py  paths.py  rclone.py  rclone_processes.py  rclone_rc.py  self_update.py  shell_integration.py  updates.py
tests/: rust_linux_mount_smoke.sh  rust_linux_openssh_startup_smoke.sh  rust_macos_gui_smoke.sh  rust_macos_mount_smoke.sh  rust_packaged_update_smoke.sh  rust_single_instance_smoke.sh  rust_wayland_smoke.sh  rust_windows_gui_smoke.ps1  rust_windows_mount_smoke.ps1  test_app_ipc.py  test_build_local.py  test_connection_reliability.py  test_entrypoints.py  test_mount_process.py  test_rclone_processes.py  test_rclone_rc.py  test_rclone_resolution.py  test_self_update.py  test_shell_integration.py  test_startup_errors.py  test_updates.py  windows_installer_static.sh
