[workspace]
members = [
    "crates/mountmate-app",
    "crates/mountmate-core",
    "crates/mountmate-platform",
]
resolver = "2"

[workspace.package]
version = "0.4.4-alpha.4"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/Stardust0831/ssh-mountmate"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "2.5"
base64 = "0.22"
configparser = { version = "3.1", features = ["indexmap"] }
directories = "6.0"
dark-light = "2.0"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core", "zeroize"] }
fs2 = "0.4"
glob = "0.3"
iced = { version = "0.14.0", features = ["tokio", "svg"] }
iced_term = "0.8.0"
keyring = { version = "3.6.3", default-features = false }
notify-rust = "=4.17.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false }
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
ring = "0.17"
roxmltree = "0.20"
rustix = { version = "1.1", features = ["fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
tray-icon = { version = "0.24.1", default-features = false }
tokio = { version = "1.48", features = ["rt"] }
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
sys-locale = "0.3"
url = "2.5"
uuid = { version = "1.17", features = ["v4", "serde"] }
wait-timeout = "0.2"
windows-sys = "0.61"
windows = "0.61.3"
windows-registry = "0.6.1"
zip = { version = "7.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }
zbus = "5.17"
zeroize = "1.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
