[package]
name = "ssh-mountmate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced.workspace = true
mountmate-core = { path = "../mountmate-core" }
mountmate-platform = { path = "../mountmate-platform" }
tokio.workspace = true

[[bin]]
name = "SSHMountMate"
path = "src/main.rs"
