[package]
name = "mountmate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
configparser.workspace = true
directories.workspace = true
fs2.workspace = true
glob.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
wait-timeout.workspace = true
zip.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
