[package]
name = "mountmate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[build-dependencies]
sha2.workspace = true

[dependencies]
base64.workspace = true
configparser.workspace = true
directories.workspace = true
fs2.workspace = true
glob.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
wait-timeout.workspace = true
zip.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
