[package]
name = "mountmate-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mountmate-core = { path = "../mountmate-core" }
async-channel.workspace = true
notify-rust.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = [
    "NSApplication",
    "NSCell",
    "NSControl",
    "NSDockTile",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSResponder",
    "NSView",
] }
objc2-foundation = { workspace = true, features = ["NSGeometry", "NSString"] }
plist.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
] }
windows-registry.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile.workspace = true
